2008-02-25  Emmanuel Dreyfus <manu@netbsd.org>
	From Brian Haley <brian.haley@hp.com>
	* src/racoon/ipsec_doi.c: Do check SPI size (it was not due to a typo)

2008-02-22  Emmanuel Dreyfus <manu@netbsd.org>
	From Brian Haley <brian.haley@hp.com>
	* src/racoon/isakmp.c: Fix address length

2008-02-10  S.P.Zeidler <spz@netbsd.org>
	* src/racoon/ipsec_doi.c: fix NetBSD PR bin/37644 

2008-01-11  Yvan Vanhullebus  <vanhu@netasq.com>
	* src/racoon/handler.[ch]: added an 'established' arg to getph1byaddr()
	From Krzysztof Oledzki <olel@ans.pl>:
	* src/racoon/isakmp.c: Only search for established ph1 handles in
	  DPD (also reported new getph1byaddr() arg)
	* src/racoon/isakmp_inf.c: added some details to some logs  (also
	  reported new getph1byaddr() arg) 
	* src/racoon/crypto_openssl.c: fixed compilation with idea and
	  recent gcc
	From Timo Teras <timo.teras@iki.fi>:
	* src/racoon/isakmp_inf.c: reset iph1->dpd_r_u in the scheduler's
	  callback, to avoid some access to freed memory

2007-12-30  Matthew Grooms
	From Timo Teras <timo.teras@iki.fi>:
	* src/racoon/racoonctl.8
	  src/racoon/racoonctl.c: add GRE protocol number to racoonctl
	* src/racoon/policy.c: correct id wildcard matching for transport mode
	* src/racoon/isakmp_inf.c: reset iph1->dpd_r_u in the scheduler's
	  callback, to avoid some access to freed memory

2007-12-11  Matthew Grooms
	From Timo Teras <timo.teras@iki.fi>:
	* src/racoon/handler.c
	  src/racoon/handler.h
	  src/racoon/isakmp_quick.c
	  src/racoon/pfkey.c: add support for nat-t oa payload handling.

2007-12-04  Matthew Grooms
	From Timo Teras <timo.teras@iki.fi>:
	* src/racoon/ipsec_doi.c
	  src/racoon/ipsec_doi.h
	  src/racoon/isakmp_quick.c: modify ipsecdoi_sockaddr2id to obtain host
	  address without specific prefix legth.
	  src/racoon/isakmp_quick.c: correct a memory leak in phase2.

2007-11-29  Yvan Vanhullebus  <vanhu@netasq.com>
	From Natanael Copa <natanael.copa@gmail.com>: